samples/_failures_safe/1761617026_e002d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d8dfe5e.c: In function ‘main’:
./samples/SAFE/__tmp_0d8dfe5e.c:134:5: error: expected identifier or ‘(’ at end of input
  134 |     for (size_t
      |     ^~~
./samples/SAFE/__tmp_0d8dfe5e.c:134:5: error: expected declaration or statement at end of input
